# Porn_Fetch

./: CHANGELOG.md  ISSUES.md  LICENSE  Porn_Fetch.py  Porn_Fetch.pyproject  Porn_Fetch_CLI.py  README.md  cli.py  config.ini  credits  form.ui  form_license_agreement.ui  install.sh  install_termux.sh  install_windows.bat  install_windows.ps1  license_agreement.py  main.py  main.qml  main_android.py  main_android.qml  notes_for_myself  pyproject.toml  pysidedeploy.spec  requirements.txt  requirements_cli.txt  server.py  some_stuff_for_myself.txt  sparkle_bridge.m  test.py  test_v4.py  tests.py  ui_form.py  widget.py
.github/: FUNDING.yml
.github/workflows/: android.yml  build_all.yml  build_cli.yml  build_cli_linux.yml  build_cli_windows.yml  build_gui.yml  build_gui_linux.yml  build_gui_macos.yml  build_gui_windows.yml  build_gui_windows_arm.yml  build_macos_gui.yml  i18n-upload.yml  python-app.yml
Android/: build.gradle.kts  settings.gradle.kts
Android/app/: build.gradle.kts
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
README/: ANTIVIRUS_FLAGS.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  DOWNLOADS.md  FAQ.md  FOR_DEVELOPERS.md  IDEAS.txt  INSTALLATION.md  ISSUES.md  ROADMAP.md  SCREENSHOTS.md  SECURITY.md  STATUS.md  TRANSLATING.md  WEBSITES.md  iOS.md  why_windows_sucks.md
README/Changelogs/: Note.txt
README/Changelogs/1.0/: Changelog.md
README/Changelogs/1.1/: Changelog.md
README/Changelogs/1.2/: Changelog.md
README/Changelogs/1.3/: Changelog.md
README/Changelogs/1.4/: Changelog.md
README/Changelogs/1.5/: Changelog.md
README/Changelogs/1.6/: Changelog.md
README/Changelogs/1.7/: Changelog.md
README/Changelogs/1.8/: Changelog.md
README/Changelogs/1.9/: Changelog.md
README/Changelogs/2.0/: Changelog.md
README/Changelogs/2.1/: Changelog.md
README/Changelogs/2.2/: Changelog.md
README/Changelogs/2.3/: Changelog.md
README/Changelogs/2.4/: Changelog.md
README/Changelogs/2.5/: Changelog.md
README/Changelogs/2.6/: Changelog.md
README/Changelogs/2.7/: Changelog.md
README/Changelogs/2.8/: Changelog.md
README/Changelogs/2.9/: Changelog.md
README/Changelogs/3.0/: Changelog.md
README/Changelogs/3.1/: Changelog.md
README/Changelogs/3.2/: Changelog.md
README/Changelogs/3.3/: Changelog.md
README/Changelogs/3.4/: Changelog.md
README/Changelogs/3.5/: Changelog.md
README/Changelogs/3.6/: Changelog.md
README/Changelogs/3.7/: Changelog.md
WebApp/: app.py  style.css
home_preview/: CustomButton.qml  CustomTextField.qml  Home.qml  preview.py
settings_preview/: HelpButton.qml  Settings.qml  preview.py
src/: Porn_Fetch_v3.py  Porn_Fetch_v3.ui  category_widget.py  cli.py  form.ui  form_redesign.ui  license_agreement.py  requirements_termux.txt  resource.qrc  resources_rc.py  ressource.qrc  setup.py  ui_main_widget.py
src/android/: error_catching.py  main.py  pysidedeploy.spec  requirements.txt  shared_functions.py
src/android/frontend/: form.ui  one_time_setup.py  one_time_setup.ui  resources.py  ui_form.py  untitled.pyproject  widget.py
src/backend/: CLI_model_feature_addon.py  batch_feature.py  check_license.py  class_help.py  clients.py  config.py  consts.py  database.py  donation_nag.py  download_manager.py  errors.py  handle_ssl.py  helper_functions.py  installation.py  license.py  log_config.py  login_manager.py  macos_setup.py  one_time_functions.py  pysidedeploy.spec  requirements_android.txt  shared_functions.py  shared_gui.py  shiboken6_6.6.1_aarch64.whl  signals.py  sparkle_bridge.dylib  translation_strings.py  uninstallation.py  update_service.py  urls.txt
src/backend/sparkle/: LICENSE  sparkle_bridge.m
src/frontend/: License.py  License.ui  Porn_Fetch_v3.py  Porn_Fetch_v3.ui  form.ui  form_android.ui  form_android_startup.ui  form_desktop.ui  form_install_dialog.ui  form_keyboard_shortcuts.ui  form_license.ui  form_license_agreement.ui  form_range_selector.ui  license_agreement.py  qressource_file.qrc  range_selector.py  range_selector.ui  resource.qrc  resources.py  resources.qrc  ressources_rc.py  setup.py  stylesheet.qss  tree_widget_settings.ui  ui_form.py  ui_form_android.py  ui_form_android_startup.py  ui_form_desktop.py  ui_form_install_dialog.py  ui_form_keyboard_shortcuts.py  ui_form_license.py  ui_form_range_selector.py  ui_form_v3.py  update.ps1  update.sh
src/frontend/UI/: AbsolutelyNotOverengineeredQMessageBoxLOL.py  CreditsWidget.qml  LicenseManager.qml  LicenseWidget.qml  SupportedSitesWidget.qml  custom_combo_box.py  donation_nag.py  feedback_dialog.py  form_android.ui  form_android_startup.ui  form_batch.ui  form_donation.ui  form_license.ui  form_main_window.ui  license.py  license_bridge.py  macOS.py  pornfetch_info_dialog.py  resources.py  splashscreen.py  ssl_warning.py  stylesheet_license_button.qss  supported_websites.html  theme.py  thumbnail_viewer.py  ui_form_android.py  ui_form_android_startup.py  ui_form_batch.py  ui_form_desktop.py  ui_form_donation.py  ui_form_install_dialog.py  ui_form_keyboard_shortcuts.py  ui_form_license.py  ui_form_main_window.py  ui_form_range_selector.py
src/frontend/graphics/: logo_transparent.icns
src/frontend/stylesheets/: menu_button_account.qss  menu_button_credits.qss  menu_button_download.qss  menu_button_progress.qss  menu_button_settings.qss  menu_button_tools.qss  progressbar_converting.qss  progressbar_eporner.qss  progressbar_hqporner.qss  progressbar_missav.qss  progressbar_pornhub.qss  progressbar_spankbang.qss  progressbar_total.qss  progressbar_xhamster.qss  progressbar_xnxx.qss  progressbar_xvideos.qss  stylesheet.qss  stylesheet_button_blue.qss  stylesheet_button_green.qss  stylesheet_button_login.qss  stylesheet_button_orange  stylesheet_button_orange.qss  stylesheet_button_purple.qss  stylesheet_button_reset.qss  (+5 more)
src/scripts/: build_android.sh  install.sh  install_iSH.py  install_iSH.sh  install_macos.sh  install_termux.sh  install_windows.ps1  patch.py  patch_macos_bundle.py  patch_qtasyncio.py
src/translations/: de.qm  de.ts  en.ts  fr.ts
testing/: README.md  URLS.md
(+41 files in other folders)
