# Needed for UV Project management.
# Porn Fetch is NOT published in PyPi!

[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[project]
requires-python = ">=3.10,<3.14"
# 3.10 is needed due to truststore.
# You can manually patch it out from main.py and use older Python
# However, some libraries break due to type hinting!
# 3.14+ is not supported, due to Qt limitations.
# This is ONLY for the GUI, CLI is different


name = "Porn_Fetch"
version = "3.8"

dependencies = [
    "anyio",
    "beautifulsoup4",
    "brotli",
    "bs4",
    "certifi",
    "cffi",
    "charset-normalizer",
    "colorama",
    "cryptography",
    "fake-useragent",
    "h11",
    "h2",
    "hpack",
    "httpcore",
    "httpx",
    "hyperframe",
    "idna",
    "json5",
    "lxml",
    "m3u8",
    "markdown",
    "mutagen",
    "pycparser",
    "requests",
    "sniffio",
    "socksio",
    "soupsieve",
    "typing_extensions",
    "urllib3",
    "beeg_api",
    "eaf_base_api",
    "eporner_api",
    "hqporner_api",
    "missav_api",
    "phub",
    "porntrex_api",
    "spankbang_api",
    "xfreehd_api",
    "xhamster_api",
    "xnxx_api",
    "xvideos_api",
    "youporn_api"
]

[project.optional-dependencies]
gui = ["PySide6", "truststore"]
cli = ["rich", "hue_shift"]

authors = [
    {name = "Johannes Habel", email = "EchterAlsFake@proton.me"}
]

description = "a downloader for pornographic content"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-or-later"
