# Needed for UV Project management.
# Porn Fetch is NOT published in PyPi!

[project]
requires-python = ">=3.14"
# 3.14+ is not supported, due to Qt limitations.
# This is ONLY for the GUI, CLI is different

name = "Porn_Fetch"
version = "3.9"
authors = [
    {name = "Johannes Habel", email = "EchterAlsFake@proton.me"}
]

description = "a downloader for pornographic content"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

dependencies = [
    "anyio",
    "brotli",
    "certifi",
    "cffi",
    "charset-normalizer",
    "colorama",
    "fake-useragent",
    "idna",
    "json5",
    "m3u8",
    "markdown",
    "pycparser",
    "sniffio",
    "socksio",
    "soupsieve",
    "typing_extensions",
    "python-dateutil",
    "urllib3",
    "unofficial-api-for-beeg @ git+https://github.com/EchterAlsFake/unofficial-api-for-beeg",
    "unofficial-api-for-eporner @ git+https://github.com/EchterAlsFake/unofficial-api-for-eporner",
    "unofficial-api-for-pornhub @ git+https://github.com/EchterAlsFake/unofficial-api-for-pornhub",
    "unofficial-api-for-porntrex @ git+https://github.com/EchterAlsFake/unofficial-api-for-porntrex",
    "unofficial-api-for-spankbang @ git+https://github.com/EchterAlsFake/unofficial-api-for-spankbang",
    "unofficial-api-for-xfreehd @ git+https://github.com/EchterAlsFake/unofficial-api-for-xfreehd",
    "unofficial-api-for-xhamster @ git+https://github.com/EchterAlsFake/unofficial-api-for-xhamster",
    "unofficial-api-for-xnxx @ git+https://github.com/EchterAlsFake/unofficial-api-for-xnxx",
    "unofficial-api-for-xvideos @ git+https://github.com/EchterAlsFake/unofficial-api-for-xvideos",
    "unofficial-api-for-youporn @ git+https://github.com/EchterAlsFake/unofficial-api-for-youporn",
    "unofficial-api-for-redtube @ git+https://github.com/EchterAlsFake/unofficial-api-for-redtube",
    "unofficial-api-for-tube8 @ git+https://github.com/EchterAlsFake/unofficial-api-for-tube8",
    "unofficial-api-for-thumbzilla @ git+https://github.com/EchterAlsFake/unofficial-api-for-thumbzilla",
    "eaf_base_api @ git+https://github.com/echteralsfake/eaf_base_api",
    "browser-cookie3>=0.20.1",
]


[project.optional-dependencies]
gui = ["PySide6", "truststore", "pywin32; sys_platform == 'win32'", "pip", "cryptography"]
# pip is needed, because pyside6-deploy invokes pip when building the project with pyside6-deploy

cli = ["rich", "hue_shift", "pyinstaller"]
dev = ["rich", "hue_shift", "PySide6", "truststore", "pywin32; sys_platform == 'win32'", "pip", "cryptography"]
av = ['av>=16.1.0; python_version >= "3.10" and platform_system == "Windows" and platform_machine == "AMD64"',
    'av>=16.1.0; python_version >= "3.10" and platform_system == "Darwin"  and (platform_machine == "x86_64" or platform_machine == "arm64")',
    'av>=16.1.0; python_version >= "3.10" and platform_system == "Linux"   and (platform_machine == "x86_64" or platform_machine == "aarch64")']
